# wire-tools-ts

./: .gitignore  .pnpmfile.cjs  .prettierrc.js  BUILD.bazel  CLAUDE.md  README.md  STYLE.md  eslint.config.mjs  jest.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-npm.yaml
docs/: local-setup.md  production-bootstrap.md  setup-external-cluster-guide.md
etc/jest/: esm-transformer.cjs
etc/tsconfig/: tsconfig.base.jest.json  tsconfig.base.json
scripts/: clean-ts.fish  clean.sh  fix-hybrid-output.mjs  flow-heartbeat-monitor.mjs  run-flow.fish  run-flow.mjs
