# =============================================================================
# wire-tools-ts — test cluster harness, flow tests, debugging server + TUI.
#                 pnpm workspace (packages/*).
# =============================================================================
# Chain position 6 (last): depends on //wire-solana:build, the predecessor in
# the required sequential build order. Through that single edge it transitively
# pulls the whole chain (cdt -> sysio -> libraries-ts -> ethereum -> solana),
# so `bazel build //wire-tools-ts:build` builds the entire platform in order.
#
# wire-tools-ts consumes @wireio/sdk-core + @wireio/shared (from wire-libraries-ts)
# and resolves @wireio/opp-typescript-models from wire-sysio/build/opp via its
# .pnpmfile.cjs at `pnpm install` — both satisfied by the upstream chain.
# =============================================================================

load("//:build_defs.bzl", "js_workspace_build")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "node_modules/**",
            "**/lib/**",
            "**/dist/**",
            ".git/**",
            "BUILD.bazel",
        ],
    ),
)

js_workspace_build(
    name = "build",
    # Newline-separated (NOT `&&` — set -e AND-OR exemption, see build_defs).
    # Lint runs in the same gate step as the build: the eslint config encodes
    # the mechanical STYLE.md / manifest-rule laws, so a violation fails the
    # platform build, not a human review three pushes later.
    build_cmd = "pnpm run build\npnpm run lint",
    package_manager = "pnpm",
    # Predecessor in the sequential chain; transitively pulls the full platform.
    deps = ["//wire-solana:build"],
    tags = ["ts"],
    # Unit tests (cluster-tool + debugging-*) gate the platform build — and
    # therefore run before the e2e gate's flow tests — skippable only via the
    # shared SKIP_TESTS knob (see js_workspace_build).
    test_cmd = "pnpm test",
    working_dir = "wire-tools-ts",
)
